--- a/examples/addedLanguage.html
+++ b/examples/addedLanguage.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-    <script src="../src/CibulCalendar.min.js" type="text/javascript"></script>
+    <script src="../src/CibulCalendar.js" type="text/javascript"></script>
     <style type="text/css">
       * { color: white; }
       body { background-color: #1A1A1A; text-align: center; font-family: 'Segoe UI',Tahoma,Helvetica,Sans-Serif; }
